
  - Brazilian Portugese UI localisation + instant start guide
  translation

  - Slovak UI localisation + full manual translation

  - Italian instant start guide translation

 Bug fixes:

   - Localisation errors
   http://sourceforge.net/support/tracker.php?aid=1598209

   - Some texts not loaded from external resource bundle
   http://sourceforge.net/support/tracker.php?aid=1602787

   - [target=japanese] some trailing spaces are not reproduced
   http://sourceforge.net/support/tracker.php?aid=1599209

   - Insert best match (% setting)
   http://sourceforge.net/support/tracker.php?aid=1599127

   - Segmentation of bundles on empty lines
   http://sourceforge.net/support/tracker.php?aid=1577534

----------------------------------------------------------------------
1.6.1
Contains a new HTML Help Compiler (HCC) filter

 Implemented requests:

  - HTML Help Compiler filter
  http://sourceforge.net/support/tracker.php?aid=1592946

  - Restore GUI widget
   http://sourceforge.net/support/tracker.php?aid=1557794

 Other enhancements:

  - Command line option to select a different locale than the default

  - Command line option to load an external resource bundle

  - Improved display of OmegaT version. Now includes update number.

 Bug fixes:

  - Arbitrary modification of project_save.tmx
  http://sourceforge.net/support/tracker.php?aid=1594483

----------------------------------------------------------------------
1.6.0_02
Contains a number of quick bug fixes and a documentation enhancement.

 Enhancements:

  - [Doc] readme.txt: some clarification on Java
  http://sourceforge.net/support/tracker.php?aid=1592468

 Bug fixes:

  -Incorreft referral in index.html in root dir
  http://sourceforge.net/support/tracker.php?aid=1591028

  - Links not working in instant start guide
  http://sourceforge.net/support/tracker.php?aid=1591025

  - Search in files shouldn't be checked by default
  http://sourceforge.net/support/tracker.php?aid=1590209
